gen/generated/HTMLParser.java
// Generated from C:/Users/hp/Desktop/final compiler generate/in/in2/src/generated/gen\HTMLParser.g4 by ANTLR 4.9.1
package gen.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PAGE_DEFINITION=1, CONTROLLER_DEFINITION=2, SEA_WS=3, COMMENT=4, EXTENDS=5, 
		COMMA=6, SEMICOLON=7, PAGE_OPEN=8, PAGE_CLOSE=9, PARENTHESE_OPEN=10, PARENTHESE_CLOSE=11, 
		IN=12, OUT=13, COLON=14, HEADER_OPEN=15, HEADER_CLOSE=16, HEADER=17, HEADER_TYPE=18, 
		STRING_VALUE=19, INPUT_TYPES=20, OUTPUT_TYPES=21, LINK=22, ATTRIBUTE=23, 
		PAGE_ID=24, NUMERIC_VALUE1=25, PAGE_WHITESPACE=26, CONTROLLER_OPEN=27, 
		CONTROLS=28, CONTROLLER_WHITESPACE=29, CONTROLLER_ID=30, CODE_WHITESPACE=31, 
		C_COMMA=32, C_SEMICOLON=33, CODE_OPEN=34, CODE_CLOSE=35, CONTROLLER_CLOSE=36, 
		C_PARENTHESE_OPEN=37, C_PARENTHESE_CLOSE=38, IF=39, ELSE_IF=40, ELSE=41, 
		WHILE=42, SWITCH=43, FOR=44, FUNCTION=45, C_COMMENT=46, PRINT=47, VAR=48, 
		LIST=49, POST=50, SESSION=51, EQUALS=52, OPERAND=53, BOOLEAN_VALUE=54, 
		LIST_ADD=55, LIST_LENGTH=56, LIST_REMOVE=57, LIST_GET=58, DOT=59, VARIABLE_NAME=60, 
		NUMERIC_VALUE=61, C_COLON=62, C_STRING_VALUE=63, CONDITIONAL_OPERATORS_CONCAT=64, 
		CONDITIONAL_OPERATORS_TWO_OPERAND=65;
	public static final int
		RULE_program = 0, RULE_program_structure = 1, RULE_pages = 2, RULE_controllers = 3, 
		RULE_page = 4, RULE_page_header = 5, RULE_page_body = 6, RULE_input_rules = 7, 
		RULE_nested_input = 8, RULE_output_rules = 9, RULE_link = 10, RULE_attribute = 11, 
		RULE_controller = 12, RULE_code = 13, RULE_if_rule = 14, RULE_if_while_condition = 15, 
		RULE_for_rule = 16, RULE_while_rule = 17, RULE_function = 18, RULE_variable_declaration = 19, 
		RULE_variable_assignment = 20, RULE_print = 21, RULE_function_call = 22, 
		RULE_list = 23, RULE_list_operations = 24, RULE_list_add = 25, RULE_list_remove = 26, 
		RULE_list_length = 27, RULE_list_get = 28, RULE_post_rule = 29, RULE_session_rule = 30, 
		RULE_value = 31, RULE_nested_code = 32, RULE_lang_Misc = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_structure", "pages", "controllers", "page", "page_header", 
			"page_body", "input_rules", "nested_input", "output_rules", "link", "attribute", 
			"controller", "code", "if_rule", "if_while_condition", "for_rule", "while_rule", 
			"function", "variable_declaration", "variable_assignment", "print", "function_call", 
			"list", "list_operations", "list_add", "list_remove", "list_length", 
			"list_get", "post_rule", "session_rule", "value", "nested_code", "lang_Misc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'page'", "'controller'", null, null, "'extends'", null, null, 
			null, null, null, null, "'in'", "'out'", null, null, null, "'header'", 
			null, null, null, null, "'Link'", null, null, null, null, null, "'controls'", 
			null, null, null, null, null, null, null, null, null, null, "'if'", "'else if'", 
			"'else'", "'while'", "'switch'", "'for'", "'function'", null, "'print'", 
			"'var'", "'list'", "'post'", "'session'", "'='", null, null, "'add'", 
			"'length'", "'remove'", "'get'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PAGE_DEFINITION", "CONTROLLER_DEFINITION", "SEA_WS", "COMMENT", 
			"EXTENDS", "COMMA", "SEMICOLON", "PAGE_OPEN", "PAGE_CLOSE", "PARENTHESE_OPEN", 
			"PARENTHESE_CLOSE", "IN", "OUT", "COLON", "HEADER_OPEN", "HEADER_CLOSE", 
			"HEADER", "HEADER_TYPE", "STRING_VALUE", "INPUT_TYPES", "OUTPUT_TYPES", 
			"LINK", "ATTRIBUTE", "PAGE_ID", "NUMERIC_VALUE1", "PAGE_WHITESPACE", 
			"CONTROLLER_OPEN", "CONTROLS", "CONTROLLER_WHITESPACE", "CONTROLLER_ID", 
			"CODE_WHITESPACE", "C_COMMA", "C_SEMICOLON", "CODE_OPEN", "CODE_CLOSE", 
			"CONTROLLER_CLOSE", "C_PARENTHESE_OPEN", "C_PARENTHESE_CLOSE", "IF", 
			"ELSE_IF", "ELSE", "WHILE", "SWITCH", "FOR", "FUNCTION", "C_COMMENT", 
			"PRINT", "VAR", "LIST", "POST", "SESSION", "EQUALS", "OPERAND", "BOOLEAN_VALUE", 
			"LIST_ADD", "LIST_LENGTH", "LIST_REMOVE", "LIST_GET", "DOT", "VARIABLE_NAME", 
			"NUMERIC_VALUE", "C_COLON", "C_STRING_VALUE", "CONDITIONAL_OPERATORS_CONCAT", 
			"CONDITIONAL_OPERATORS_TWO_OPERAND"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Lang_MiscContext> lang_Misc() {
			return getRuleContexts(Lang_MiscContext.class);
		}
		public Lang_MiscContext lang_Misc(int i) {
			return getRuleContext(Lang_MiscContext.class,i);
		}
		public List<Program_structureContext> program_structure() {
			return getRuleContexts(Program_structureContext.class);
		}
		public Program_structureContext program_structure(int i) {
			return getRuleContext(Program_structureContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEA_WS || _la==COMMENT) {
				{
				{
				setState(68);
				lang_Misc();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAGE_DEFINITION) {
				{
				{
				setState(74);
				program_structure();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_structureContext extends ParserRuleContext {
		public PagesContext pages() {
			return getRuleContext(PagesContext.class,0);
		}
		public ControllersContext controllers() {
			return getRuleContext(ControllersContext.class,0);
		}
		public List<Lang_MiscContext> lang_Misc() {
			return getRuleContexts(Lang_MiscContext.class);
		}
		public Lang_MiscContext lang_Misc(int i) {
			return getRuleContext(Lang_MiscContext.class,i);
		}
		public Program_structureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterProgram_structure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitProgram_structure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitProgram_structure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program_structureContext program_structure() throws RecognitionException {
		Program_structureContext _localctx = new Program_structureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_structure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			pages();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEA_WS || _la==COMMENT) {
				{
				{
				setState(81);
				lang_Misc();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			controllers();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEA_WS || _la==COMMENT) {
				{
				{
				setState(88);
				lang_Misc();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PagesContext extends ParserRuleContext {
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public List<Lang_MiscContext> lang_Misc() {
			return getRuleContexts(Lang_MiscContext.class);
		}
		public Lang_MiscContext lang_Misc(int i) {
			return getRuleContext(Lang_MiscContext.class,i);
		}
		public PagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPages(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPages(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PagesContext pages() throws RecognitionException {
		PagesContext _localctx = new PagesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pages);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			page();
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SEA_WS || _la==COMMENT) {
						{
						{
						setState(95);
						lang_Misc();
						}
						}
						setState(100);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(101);
					page();
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControllersContext extends ParserRuleContext {
		public List<ControllerContext> controller() {
			return getRuleContexts(ControllerContext.class);
		}
		public ControllerContext controller(int i) {
			return getRuleContext(ControllerContext.class,i);
		}
		public List<Lang_MiscContext> lang_Misc() {
			return getRuleContexts(Lang_MiscContext.class);
		}
		public Lang_MiscContext lang_Misc(int i) {
			return getRuleContext(Lang_MiscContext.class,i);
		}
		public ControllersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controllers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterControllers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitControllers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitControllers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControllersContext controllers() throws RecognitionException {
		ControllersContext _localctx = new ControllersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_controllers);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			controller();
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SEA_WS || _la==COMMENT) {
						{
						{
						setState(108);
						lang_Misc();
						}
						}
						setState(113);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(114);
					controller();
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public TerminalNode PAGE_DEFINITION() { return getToken(HTMLParser.PAGE_DEFINITION, 0); }
		public List<TerminalNode> PAGE_ID() { return getTokens(HTMLParser.PAGE_ID); }
		public TerminalNode PAGE_ID(int i) {
			return getToken(HTMLParser.PAGE_ID, i);
		}
		public Page_headerContext page_header() {
			return getRuleContext(Page_headerContext.class,0);
		}
		public TerminalNode PAGE_OPEN() { return getToken(HTMLParser.PAGE_OPEN, 0); }
		public TerminalNode PAGE_CLOSE() { return getToken(HTMLParser.PAGE_CLOSE, 0); }
		public TerminalNode EXTENDS() { return getToken(HTMLParser.EXTENDS, 0); }
		public List<Page_bodyContext> page_body() {
			return getRuleContexts(Page_bodyContext.class);
		}
		public Page_bodyContext page_body(int i) {
			return getRuleContext(Page_bodyContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(HTMLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HTMLParser.COMMA, i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(PAGE_DEFINITION);
			setState(121);
			match(PAGE_ID);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(122);
				match(EXTENDS);
				setState(123);
				match(PAGE_ID);
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(124);
					match(COMMA);
					setState(125);
					match(PAGE_ID);
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(133);
			page_header();
			setState(134);
			match(PAGE_OPEN);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IN) | (1L << OUT) | (1L << LINK))) != 0)) {
				{
				{
				setState(135);
				page_body();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(PAGE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Page_headerContext extends ParserRuleContext {
		public TerminalNode HEADER_OPEN() { return getToken(HTMLParser.HEADER_OPEN, 0); }
		public TerminalNode HEADER() { return getToken(HTMLParser.HEADER, 0); }
		public TerminalNode PARENTHESE_OPEN() { return getToken(HTMLParser.PARENTHESE_OPEN, 0); }
		public TerminalNode PARENTHESE_CLOSE() { return getToken(HTMLParser.PARENTHESE_CLOSE, 0); }
		public TerminalNode HEADER_CLOSE() { return getToken(HTMLParser.HEADER_CLOSE, 0); }
		public List<TerminalNode> HEADER_TYPE() { return getTokens(HTMLParser.HEADER_TYPE); }
		public TerminalNode HEADER_TYPE(int i) {
			return getToken(HTMLParser.HEADER_TYPE, i);
		}
		public List<TerminalNode> COLON() { return getTokens(HTMLParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(HTMLParser.COLON, i);
		}
		public List<TerminalNode> STRING_VALUE() { return getTokens(HTMLParser.STRING_VALUE); }
		public TerminalNode STRING_VALUE(int i) {
			return getToken(HTMLParser.STRING_VALUE, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(HTMLParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(HTMLParser.SEMICOLON, i);
		}
		public Page_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPage_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPage_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPage_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Page_headerContext page_header() throws RecognitionException {
		Page_headerContext _localctx = new Page_headerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_page_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(HEADER_OPEN);
			setState(144);
			match(HEADER);
			setState(145);
			match(PARENTHESE_OPEN);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HEADER_TYPE) {
				{
				{
				setState(146);
				match(HEADER_TYPE);
				setState(147);
				match(COLON);
				setState(148);
				match(STRING_VALUE);
				setState(149);
				match(SEMICOLON);
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(PARENTHESE_CLOSE);
			setState(156);
			match(HEADER_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Page_bodyContext extends ParserRuleContext {
		public Input_rulesContext input_rules() {
			return getRuleContext(Input_rulesContext.class,0);
		}
		public Output_rulesContext output_rules() {
			return getRuleContext(Output_rulesContext.class,0);
		}
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public Page_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPage_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPage_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPage_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Page_bodyContext page_body() throws RecognitionException {
		Page_bodyContext _localctx = new Page_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_page_body);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IN:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				input_rules();
				}
				break;
			case OUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				output_rules();
				}
				break;
			case LINK:
				enterOuterAlt(_localctx, 3);
				{
				setState(160);
				link();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_rulesContext extends ParserRuleContext {
		public TerminalNode IN() { return getToken(HTMLParser.IN, 0); }
		public TerminalNode COLON() { return getToken(HTMLParser.COLON, 0); }
		public TerminalNode PARENTHESE_OPEN() { return getToken(HTMLParser.PARENTHESE_OPEN, 0); }
		public TerminalNode PAGE_ID() { return getToken(HTMLParser.PAGE_ID, 0); }
		public TerminalNode PARENTHESE_CLOSE() { return getToken(HTMLParser.PARENTHESE_CLOSE, 0); }
		public List<Nested_inputContext> nested_input() {
			return getRuleContexts(Nested_inputContext.class);
		}
		public Nested_inputContext nested_input(int i) {
			return getRuleContext(Nested_inputContext.class,i);
		}
		public Input_rulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterInput_rules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitInput_rules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitInput_rules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Input_rulesContext input_rules() throws RecognitionException {
		Input_rulesContext _localctx = new Input_rulesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_input_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(IN);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PARENTHESE_OPEN) {
				{
				setState(164);
				match(PARENTHESE_OPEN);
				setState(165);
				match(PAGE_ID);
				setState(166);
				match(PARENTHESE_CLOSE);
				}
			}

			setState(169);
			match(COLON);
			setState(171); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(170);
				nested_input();
				}
				}
				setState(173); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INPUT_TYPES );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nested_inputContext extends ParserRuleContext {
		public TerminalNode INPUT_TYPES() { return getToken(HTMLParser.INPUT_TYPES, 0); }
		public TerminalNode PARENTHESE_OPEN() { return getToken(HTMLParser.PARENTHESE_OPEN, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode PARENTHESE_CLOSE() { return getToken(HTMLParser.PARENTHESE_CLOSE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(HTMLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HTMLParser.COMMA, i);
		}
		public Nested_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nested_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterNested_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitNested_input(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitNested_input(this);
			else return visitor.visitChildren(this);
		}
	}
